--- a/src/components/home/hero/hero.bookshop.yml
+++ b/src/components/home/hero/hero.bookshop.yml
@@ -11,7 +11,7 @@ spec:
 blueprint:
   title: Email Marketing is the Future for Growing Your Business Revenues
   description: We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy.
-  image: /images/hero/hero-image-2.png
+  image: /images/hero/hero-image-2.jpg
   image_alt: Dashboard with reports
   button:
     text: Try This Free
